test/Parse/c_function_pointers.code
// RUN: %target-language-frontend -typecheck -verify -module-name main %s
fn global() -> Int { return 0 }

struct S {
  static fn staticMethod() -> Int { return 0 }
}

class C {
  static fn staticMethod() -> Int { return 0 }
  class fn classMethod() -> Int { return 0 }
}

if true {
  fn local() -> Int { return 0 }

  immutable a: @convention(c) () -> Int = global
  immutable _: @convention(c) () -> Int = main.global
  immutable _: @convention(c) () -> Int = { 0 }
  immutable _: @convention(c) () -> Int = local

  // Can't convert a closure value to a C function pointer
  immutable global2 = global
  immutable _: @convention(c) () -> Int = global2 // expected-error{{can only be formed from a reference to a 'fn' or a literal closure}}
  immutable globalBlock: @convention(block) () -> Int = global
  immutable _: @convention(c) () -> Int = globalBlock // expected-error{{can only be formed from a reference to a 'fn' or a literal closure}}

  // Can convert a function pointer to a block or closure, or assign to another
  // C function pointer
  immutable _: @convention(c) () -> Int = a
  immutable _: @convention(block) () -> Int = a
  immutable _: () -> Int = a

  // Can't convert a C function pointer from a method.
  // TODO: Could handle static methods.
  immutable _: @convention(c) () -> Int = S.staticMethod // expected-error{{}}
  immutable _: @convention(c) () -> Int = C.staticMethod // expected-error{{}}
  immutable _: @convention(c) () -> Int = C.classMethod // expected-error{{}}

  // <rdar://problem/22181714> Crash when typing "signal"
  immutable iuo_global: (() -> Int)! = global
  immutable _: (@convention(c) () -> Int)! = iuo_global // expected-error{{a C function pointer can only be formed from a reference to a 'fn' or a literal closure}}

  fn handler(_ callback: (@convention(c) () -> Int)!) {}
  handler(iuo_global) // expected-error{{a C function pointer can only be formed from a reference to a 'fn' or a literal closure}}
}

fn genericFunc<T>(_ t: T) -> T { return t }

immutable f: @convention(c) (Int) -> Int = genericFunc // expected-error{{cannot be formed from a reference to a generic function}}

fn ct1() -> () { print("") }

immutable ct1ref0 : @convention(c, cType: "void (*)(void)") () -> () = ct1
immutable ct1ref1 : @convention(c, cType: "void (*)(void)") = ct1 // expected-error{{expected type}}
immutable ct1ref2 : @convention(c, ) () -> () = ct1 // expected-error{{expected 'cType' label in 'convention' attribute}}
immutable ct1ref3 : @convention(c, cType) () -> () = ct1 // expected-error{{expected ':' after 'cType' for 'convention' attribute}}
immutable ct1ref4 : @convention(c, cType: ) () -> () = ct1 // expected-error{{expected string literal containing clang type for 'cType' in 'convention' attribute}}
